--- a/source/test.html
+++ b/source/test.html
@@ -9,8 +9,10 @@
 		<link rel=stylesheet HREF="page.css" TYPE="text/css">
 	</head>
 	<body>
-			<h2>This page can be used for testing in development</h2>
-			<h3>Simply refresh the the page to see your changes. Edit <i>contentscript.js</i> to change the core functionality of the extension.</h3>
+		<h1>Jargon analytics chrome plugin</h1>
+		<hr>
+		<h2>This page can be used for testing in development</h2>
+		<h3>Simply refresh the the page to see your changes. Edit <i>contentscript.js</i> to change the core functionality of the extension.</h3>
 		<div>
 			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 		</div>
